@@ -1072,7 +1072,8 @@ LISPSYM(validp,"VALIDP",ffi)
 LISPSYM(sizeof,"%SIZEOF",ffi)
 LISPSYM(bitsizeof,"%BITSIZEOF",ffi)
 LISPSYM(lookup_foreign_variable,"LOOKUP-FOREIGN-VARIABLE",ffi)
-LISPSYM(foreign_address_value,"FOREIGN-ADDRESS-VALUE",ffi)
+LISPSYM(unsigned_foreign_address,"UNSIGNED-FOREIGN-ADDRESS",ffi)
+LISPSYM(foreign_address_unsigned,"FOREIGN-ADDRESS-UNSIGNED",ffi)
 LISPSYM(foreign_value,"FOREIGN-VALUE",ffi)
 LISPSYM(set_foreign_value,"SET-FOREIGN-VALUE",ffi)
 LISPSYM(foreign_type,"FOREIGN-TYPE",ffi)
